--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # AWS SDK
-boto3==1.26.137
-botocore==1.29.137
+boto3
 
 # 阿里云 OSS SDK
-oss2==2.16.0
+oss2
 
 # 日期时间处理
 python-dateutil==2.8.2
@@ -16,7 +15,6 @@ urllib3==1.26.18
 six==1.16.0
 certifi==2023.7.22
 crcmod==1.7
-pycryptodome==3.19.0
 
 # 日志处理
 python-json-logger==2.0.7
