--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # AWS SDK
-boto3
+boto3==1.26.137
+botocore==1.29.137
 
 # 阿里云 OSS SDK
-oss2
+oss2==2.16.0
 
 # 日期时间处理
 python-dateutil==2.8.2
@@ -15,6 +16,9 @@ urllib3==1.26.18
 six==1.16.0
 certifi==2023.7.22
 crcmod==1.7
+
+# 加密（指定兼容版本）
+cryptography==39.0.1
 
 # 日志处理
 python-json-logger==2.0.7
