--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 boto3==1.26.137
 botocore==1.29.137
 
-# 阿里云 OSS SDK - 使用基础版本
-oss2==2.16.0
+# 阿里云 OSS SDK - 使用旧版本以避免 cryptography 依赖
+oss2==2.14.0
 requests==2.31.0
 urllib3==1.26.18
 crcmod==1.7
